objects/dbu_HolidaysList__c.object
<CustomObject>
    <fields>
        <fullName>dbu_Country__c</fullName>
        <description>COUNTRY</description>
        <inlineHelpText>COUNTRY</inlineHelpText>
        <label>dbu_Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_ProvincesExcluded__c</fullName>
        <description>All the provinces which are excluded</description>
        <inlineHelpText>All the provinces which are excluded</inlineHelpText>
        <label>dbu_ProvincesExcluded</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_ProvincesIncluded__c</fullName>
        <description>All the provinces which are included</description>
        <inlineHelpText>All the provinces which are included</inlineHelpText>
        <label>dbu_ProvincesIncluded</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_holidayDate__c</fullName>
        <description>holiday observed on</description>
        <inlineHelpText>holiday observed on</inlineHelpText>
        <label>dbu_holidayDate</label>
        <type>Date</type>
    </fields>
    <label>dbu_HolidaysList</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>dbu_Country__c</columns>
        <columns>dbu_holidayDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_holiday</fullName>
        <columns>NAME</columns>
        <columns>dbu_holidayDate__c</columns>
        <columns>dbu_ProvincesExcluded__c</columns>
        <columns>dbu_ProvincesIncluded__c</columns>
        <columns>dbu_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All holiday</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dbu_HolidaysList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>